added basic styling foe user list section

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,9 @@
       rel="stylesheet"
     />
 
+    <!-- google icons -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+
     <title>Chaty</title>
   </head>
   <body>
